# cochl-libmad

./: CMakeLists.txt  Makefile.in  config.sub  configure  configure.ac
android/: config.h
